Implemented my own version of VIP

--- a/exploratory_analysis/predictive_DE_analysis.ipynb
+++ b/exploratory_analysis/predictive_DE_analysis.ipynb
@@ -41,12 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "p_thresh = 0.05\n",
     "mi_thresh = 0\n",
+    "vip_thresh = 1\n",
     "lfc_thresh = log2(2)"
    ]
   },
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +127,12 @@
       "  cor = col_double(),\n",
       "  pval = col_double(),\n",
       "  n = col_double()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  vip_scores = col_double(),\n",
+      "  coeff = col_double()\n",
       ")\n"
      ]
     }
@@ -139,7 +146,9 @@
     "    dplyr::rename(deg_l2fc = log2FoldChange, deg_padj = padj)\n",
     "mi_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_MI_survival_results.tsv\"))\n",
     "cor_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_cor_results.tsv\")) %>%\n",
-    "    dplyr::rename(cor_test_cor = cor, cor_test_pval = pval, cor_test_n = n)"
+    "    dplyr::rename(cor_test_cor = cor, cor_test_pval = pval, cor_test_n = n)\n",
+    "plsr_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_plsr_results.tsv\")) %>%\n",
+    "    dplyr::rename(plsr_vip = vip_scores, plsr_coeff = coeff)"
    ]
   },
   {
@@ -150,8 +159,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All genes (that are present in both - DESeq2 filters out lowly expressed genes)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -175,83 +191,21 @@
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 6 × 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>coxph_pval</th><th scope=col>coxph_coeff</th><th scope=col>deg_l2fc</th><th scope=col>deg_padj</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>PGF    </td><td>0.54425160</td><td> 0.062918777</td><td>-0.00558361</td><td>9.919896e-01</td></tr>\n",
-       "\t<tr><td>TIMP4  </td><td>0.21721965</td><td> 0.161809921</td><td>-4.45396269</td><td>5.769052e-12</td></tr>\n",
-       "\t<tr><td>C1QTNF6</td><td>0.01685799</td><td> 0.273679674</td><td> 0.46855664</td><td>2.090489e-01</td></tr>\n",
-       "\t<tr><td>TNC    </td><td>0.01755491</td><td> 0.181345111</td><td> 0.43931731</td><td>4.140684e-01</td></tr>\n",
-       "\t<tr><td>PRL    </td><td>0.20689399</td><td> 0.367487825</td><td>-3.27230838</td><td>1.246596e-03</td></tr>\n",
-       "\t<tr><td>OGN    </td><td>0.93805902</td><td>-0.008228786</td><td>-6.39269858</td><td>3.630674e-16</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
+       "46"
       ],
       "text/latex": [
-       "A tibble: 6 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " geneID & coxph\\_pval & coxph\\_coeff & deg\\_l2fc & deg\\_padj\\\\\n",
-       " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t PGF     & 0.54425160 &  0.062918777 & -0.00558361 & 9.919896e-01\\\\\n",
-       "\t TIMP4   & 0.21721965 &  0.161809921 & -4.45396269 & 5.769052e-12\\\\\n",
-       "\t C1QTNF6 & 0.01685799 &  0.273679674 &  0.46855664 & 2.090489e-01\\\\\n",
-       "\t TNC     & 0.01755491 &  0.181345111 &  0.43931731 & 4.140684e-01\\\\\n",
-       "\t PRL     & 0.20689399 &  0.367487825 & -3.27230838 & 1.246596e-03\\\\\n",
-       "\t OGN     & 0.93805902 & -0.008228786 & -6.39269858 & 3.630674e-16\\\\\n",
-       "\\end{tabular}\n"
+       "46"
       ],
       "text/markdown": [
-       "\n",
-       "A tibble: 6 × 5\n",
-       "\n",
-       "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | deg_l2fc &lt;dbl&gt; | deg_padj &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| PGF     | 0.54425160 |  0.062918777 | -0.00558361 | 9.919896e-01 |\n",
-       "| TIMP4   | 0.21721965 |  0.161809921 | -4.45396269 | 5.769052e-12 |\n",
-       "| C1QTNF6 | 0.01685799 |  0.273679674 |  0.46855664 | 2.090489e-01 |\n",
-       "| TNC     | 0.01755491 |  0.181345111 |  0.43931731 | 4.140684e-01 |\n",
-       "| PRL     | 0.20689399 |  0.367487825 | -3.27230838 | 1.246596e-03 |\n",
-       "| OGN     | 0.93805902 | -0.008228786 | -6.39269858 | 3.630674e-16 |\n",
-       "\n"
+       "46"
       ],
       "text/plain": [
-       "  geneID  coxph_pval coxph_coeff  deg_l2fc    deg_padj    \n",
-       "1 PGF     0.54425160  0.062918777 -0.00558361 9.919896e-01\n",
-       "2 TIMP4   0.21721965  0.161809921 -4.45396269 5.769052e-12\n",
-       "3 C1QTNF6 0.01685799  0.273679674  0.46855664 2.090489e-01\n",
-       "4 TNC     0.01755491  0.181345111  0.43931731 4.140684e-01\n",
-       "5 PRL     0.20689399  0.367487825 -3.27230838 1.246596e-03\n",
-       "6 OGN     0.93805902 -0.008228786 -6.39269858 3.630674e-16"
+       "[1] 46"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "deg_and_coxph <- coxph_df %>%\n",
-    "    inner_join(deg_df, by = \"geneID\")\n",
-    "nrow(deg_and_coxph)\n",
-    "head(deg_and_coxph)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## All genes (that are present in both - DESeq2 filters out lowly expressed genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -273,6 +227,13 @@
     }
    ],
    "source": [
+    "deg_and_coxph <- coxph_df %>%\n",
+    "    inner_join(deg_df, by = \"geneID\")\n",
+    "nrow(deg_and_coxph)\n",
+    "\n",
+    "nrow(deg_and_coxph %>%\n",
+    "    dplyr::filter(coxph_pval < p_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh))\n",
+    "\n",
     "cor.test(deg_and_coxph$coxph_pval, deg_and_coxph$deg_padj)"
    ]
   },
@@ -280,27 +241,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is the size of overlap?"
+    "# DE and PLSR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All genes (that are present in both - DESeq2 filters out lowly expressed genes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "46"
+       "917"
       ],
       "text/latex": [
-       "46"
+       "917"
       ],
       "text/markdown": [
-       "46"
+       "917"
       ],
       "text/plain": [
-       "[1] 46"
+       "[1] 917"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "97"
+      ],
+      "text/latex": [
+       "97"
+      ],
+      "text/markdown": [
+       "97"
+      ],
+      "text/plain": [
+       "[1] 97"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  deg_and_plsr$plsr_vip and abs(deg_and_plsr$deg_padj)\n",
+       "t = 0.076804, df = 915, p-value = 0.9388\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.06221034  0.06726717\n",
+       "sample estimates:\n",
+       "        cor \n",
+       "0.002539056 \n"
       ]
      },
      "metadata": {},
@@ -308,20 +313,26 @@
     }
    ],
    "source": [
-    "nrow(deg_and_coxph %>%\n",
-    "    dplyr::filter(coxph_pval < p_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh))"
+    "deg_and_plsr <- plsr_df %>%\n",
+    "    inner_join(deg_df, by = \"geneID\")\n",
+    "nrow(deg_and_plsr)\n",
+    "\n",
+    "nrow(deg_and_plsr %>%\n",
+    "    dplyr::filter(plsr_vip > vip_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh))\n",
+    "\n",
+    "cor.test(deg_and_plsr$plsr_vip, abs(deg_and_plsr$deg_padj))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MI and Cox"
+    "# PLSR and Cox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -345,58 +356,35 @@
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 6 × 4</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>coxph_pval</th><th scope=col>coxph_coeff</th><th scope=col>MI_est_median</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>PGF    </td><td>0.54425160</td><td> 0.062918777</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>TIMP4  </td><td>0.21721965</td><td> 0.161809921</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>C1QTNF6</td><td>0.01685799</td><td> 0.273679674</td><td>0.1079641</td></tr>\n",
-       "\t<tr><td>TNC    </td><td>0.01755491</td><td> 0.181345111</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>PRL    </td><td>0.20689399</td><td> 0.367487825</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>OGN    </td><td>0.93805902</td><td>-0.008228786</td><td>0.0000000</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
+       "63"
       ],
       "text/latex": [
-       "A tibble: 6 × 4\n",
-       "\\begin{tabular}{llll}\n",
-       " geneID & coxph\\_pval & coxph\\_coeff & MI\\_est\\_median\\\\\n",
-       " <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t PGF     & 0.54425160 &  0.062918777 & 0.0000000\\\\\n",
-       "\t TIMP4   & 0.21721965 &  0.161809921 & 0.0000000\\\\\n",
-       "\t C1QTNF6 & 0.01685799 &  0.273679674 & 0.1079641\\\\\n",
-       "\t TNC     & 0.01755491 &  0.181345111 & 0.0000000\\\\\n",
-       "\t PRL     & 0.20689399 &  0.367487825 & 0.0000000\\\\\n",
-       "\t OGN     & 0.93805902 & -0.008228786 & 0.0000000\\\\\n",
-       "\\end{tabular}\n"
+       "63"
       ],
       "text/markdown": [
-       "\n",
-       "A tibble: 6 × 4\n",
-       "\n",
-       "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | MI_est_median &lt;dbl&gt; |\n",
-       "|---|---|---|---|\n",
-       "| PGF     | 0.54425160 |  0.062918777 | 0.0000000 |\n",
-       "| TIMP4   | 0.21721965 |  0.161809921 | 0.0000000 |\n",
-       "| C1QTNF6 | 0.01685799 |  0.273679674 | 0.1079641 |\n",
-       "| TNC     | 0.01755491 |  0.181345111 | 0.0000000 |\n",
-       "| PRL     | 0.20689399 |  0.367487825 | 0.0000000 |\n",
-       "| OGN     | 0.93805902 | -0.008228786 | 0.0000000 |\n",
-       "\n"
+       "63"
       ],
       "text/plain": [
-       "  geneID  coxph_pval coxph_coeff  MI_est_median\n",
-       "1 PGF     0.54425160  0.062918777 0.0000000    \n",
-       "2 TIMP4   0.21721965  0.161809921 0.0000000    \n",
-       "3 C1QTNF6 0.01685799  0.273679674 0.1079641    \n",
-       "4 TNC     0.01755491  0.181345111 0.0000000    \n",
-       "5 PRL     0.20689399  0.367487825 0.0000000    \n",
-       "6 OGN     0.93805902 -0.008228786 0.0000000    "
+       "[1] 63"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  plsr_and_cox$plsr_vip and plsr_and_cox$coxph_pval\n",
+       "t = 0.43875, df = 1006, p-value = 0.6609\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.04795569  0.07551374\n",
+       "sample estimates:\n",
+       "       cor \n",
+       "0.01383175 \n"
       ]
      },
      "metadata": {},
@@ -404,31 +392,72 @@
     }
    ],
    "source": [
-    "mi_and_coxph_df <- coxph_df %>%\n",
-    "    inner_join(mi_df, by = \"geneID\")\n",
-    "nrow(mi_and_coxph_df)\n",
-    "head(mi_and_coxph_df)"
+    "plsr_and_cox <- plsr_df %>%\n",
+    "    inner_join(coxph_df, by = \"geneID\")\n",
+    "nrow(plsr_and_cox\n",
+    "    )\n",
+    "\n",
+    "nrow(plsr_and_cox %>%\n",
+    "    dplyr::filter(plsr_vip > vip_thresh, coxph_pval < p_thresh))\n",
+    "\n",
+    "cor.test(plsr_and_cox$plsr_vip, plsr_and_cox$coxph_pval)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## All genes"
+    "# MI and Cox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1008"
+      ],
+      "text/latex": [
+       "1008"
+      ],
+      "text/markdown": [
+       "1008"
+      ],
+      "text/plain": [
+       "[1] 1008"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "94"
+      ],
+      "text/latex": [
+       "94"
+      ],
+      "text/markdown": [
+       "94"
+      ],
+      "text/plain": [
+       "[1] 94"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
        "\n",
        "\tPearson's product-moment correlation\n",
        "\n",
-       "data:  mi_and_coxph_df$coxph_pval and mi_and_coxph_df$MI_est_median\n",
+       "data:  mi_and_coxph_df$MI_est_median and mi_and_coxph_df$coxph_pval\n",
        "t = -1.9059, df = 1006, p-value = 0.05695\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
@@ -443,7 +472,14 @@
     }
    ],
    "source": [
-    "cor.test(mi_and_coxph_df$coxph_pval, mi_and_coxph_df$MI_est_median)"
+    "mi_and_coxph_df <- coxph_df %>%\n",
+    "    inner_join(mi_df, by = \"geneID\")\n",
+    "nrow(mi_and_coxph_df)\n",
+    "\n",
+    "nrow(mi_and_coxph_df %>%\n",
+    "    dplyr::filter(MI_est_median > mi_thresh,  coxph_pval < p_thresh))\n",
+    "\n",
+    "cor.test(mi_and_coxph_df$MI_est_median, mi_and_coxph_df$coxph_pval)"
    ]
   },
   {
@@ -455,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -545,15 +581,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## All genes"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
