Done with feature permutation experiments.

--- a/feature_selection_analysis/MI_cls.ipynb
+++ b/feature_selection_analysis/MI_cls.ipynb
@@ -52,6 +52,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 123\n",
+    "rand = np.random.RandomState()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +259,7 @@
        "4                       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +589,7 @@
        "[5 rows x 1020 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,18 +614,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.48636989999795\n"
+      "48.97770980000132\n"
      ]
     }
    ],
    "source": [
+    "rand.seed(seed)\n",
     "sim_rounds = 101\n",
     "start = perf_counter()\n",
     "mi_delayed = [delayed(mutual_info_classif)(X[:, 11:], y, discrete_features=False) for _ in range(sim_rounds)]\n",
@@ -626,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -773,15 +784,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>PRL</td>\n",
+       "      <td>0.007953</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010135</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000489</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.018703</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -805,14 +816,14 @@
        "1    TIMP4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "2  C1QTNF6  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "3      TNC  0.023202  0.023202  0.023202  0.023202  0.023202  0.023202   \n",
-       "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.000489   \n",
+       "4      PRL  0.007953  0.000000  0.000000  0.010135  0.000000  0.000000   \n",
        "\n",
        "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_93  MI_est_94  MI_est_95  \\\n",
        "0  0.083027  0.083027  0.083027  ...   0.083027   0.083027   0.083027   \n",
        "1  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "2  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "3  0.023202  0.023202  0.023202  ...   0.023202   0.023202   0.023202   \n",
-       "4  0.000000  0.000000  0.018703  ...   0.000000   0.000000   0.000000   \n",
+       "4  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "\n",
        "   MI_est_96  MI_est_97  MI_est_98  MI_est_99  MI_est_100  MI_est_101  \\\n",
        "0   0.083027   0.083027   0.083027   0.083027    0.083027    0.083027   \n",
@@ -831,7 +842,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,16 +858,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "489"
+       "481"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
