--- a/feature_selection_analysis/MI_reg.ipynb
+++ b/feature_selection_analysis/MI_reg.ipynb
@@ -51,6 +51,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 123\n",
+    "rand = np.random.RandomState()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +163,7 @@
        "4  TCGA-C5-A1BE-01B-11R-A13Y-07             1           2094"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +454,7 @@
        "[5 rows x 1009 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,21 +489,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.832821799995145\n"
+      "26.789449399999285\n"
      ]
     }
    ],
    "source": [
+    "rand.seed(seed)\n",
     "sim_rounds = 101\n",
     "start = perf_counter()\n",
-    "mi_delayed = [delayed(mutual_info_regression)(X, y, discrete_features=False) for _ in range(sim_rounds)]\n",
+    "mi_delayed = [delayed(mutual_info_regression)(X, y, discrete_features=False, random_state=rand) for _ in range(sim_rounds)]\n",
     "res = compute(*mi_delayed, scheduler=\"processes\")\n",
     "stop = perf_counter()\n",
     "print(stop - start)"
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +612,7 @@
        "      <th>2</th>\n",
        "      <td>C1QTNF6</td>\n",
        "      <td>0.107964</td>\n",
-       "      <td>0.109858</td>\n",
+       "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
@@ -610,14 +621,14 @@
        "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.109858</td>\n",
-       "      <td>0.109858</td>\n",
        "      <td>0.107964</td>\n",
-       "      <td>0.109858</td>\n",
-       "      <td>0.109858</td>\n",
        "      <td>0.107964</td>\n",
-       "      <td>0.109858</td>\n",
-       "      <td>0.109858</td>\n",
+       "      <td>0.107964</td>\n",
+       "      <td>0.107964</td>\n",
+       "      <td>0.107964</td>\n",
+       "      <td>0.107964</td>\n",
+       "      <td>0.107964</td>\n",
+       "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
        "      <td>0.107964</td>\n",
        "    </tr>\n",
@@ -678,21 +689,21 @@
        "    geneID  MI_est_1  MI_est_2  MI_est_3  MI_est_4  MI_est_5  MI_est_6  \\\n",
        "0      PGF  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "1    TIMP4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "2  C1QTNF6  0.107964  0.109858  0.107964  0.107964  0.107964  0.107964   \n",
+       "2  C1QTNF6  0.107964  0.107964  0.107964  0.107964  0.107964  0.107964   \n",
        "3      TNC  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "\n",
        "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_93  MI_est_94  MI_est_95  \\\n",
        "0  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "1  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
-       "2  0.107964  0.107964  0.107964  ...   0.109858   0.109858   0.107964   \n",
+       "2  0.107964  0.107964  0.107964  ...   0.107964   0.107964   0.107964   \n",
        "3  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "4  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "\n",
        "   MI_est_96  MI_est_97  MI_est_98  MI_est_99  MI_est_100  MI_est_101  \\\n",
        "0   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "1   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
-       "2   0.109858   0.109858   0.107964   0.109858    0.109858    0.107964   \n",
+       "2   0.107964   0.107964   0.107964   0.107964    0.107964    0.107964   \n",
        "3   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "4   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "\n",
@@ -706,7 +717,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,16 +733,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "548"
+       "550"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
