--- a/feature_selection_analysis/svr_opt.ipynb
+++ b/feature_selection_analysis/svr_opt.ipynb
@@ -695,8 +695,7 @@
     "    n_initial_points=n_initial,\n",
     "    n_calls = n_calls,\n",
     "    n_jobs=-1,\n",
-    "#     callback=save_callback\n",
-    "    callback=lambda x: opt.save_callback(x, \"opt_svr_h_params_TEST.tsv\", sep=\"\\t\")\n",
+    "    callback=lambda x: opt.save_callback(x, \"opt_svr_h_params_v2.tsv\", sep=\"\\t\")\n",
     ")"
    ]
   }
