--- a/preprocessing/unified_matrisome_counts_prep.ipynb
+++ b/preprocessing/unified_matrisome_counts_prep.ipynb
@@ -2,9 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: ggpubr\n",
+      "Loading required package: S4Vectors\n",
+      "Loading required package: stats4\n",
+      "Loading required package: BiocGenerics\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Attaching package: ‘BiocGenerics’\n",
+      "\n",
+      "The following objects are masked from ‘package:parallel’:\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine, intersect, setdiff, union\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
+      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
+      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
+      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
+      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
+      "    union, unique, unsplit, which, which.max, which.min\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘S4Vectors’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    first, rename\n",
+      "\n",
+      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "    expand\n",
+      "\n",
+      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "    expand.grid\n",
+      "\n",
+      "Loading required package: IRanges\n",
+      "\n",
+      "Attaching package: ‘IRanges’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    collapse, desc, slice\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    reduce\n",
+      "\n",
+      "Loading required package: GenomicRanges\n",
+      "Loading required package: GenomeInfoDb\n",
+      "Loading required package: SummarizedExperiment\n",
+      "Loading required package: Biobase\n",
+      "Welcome to Bioconductor\n",
+      "\n",
+      "    Vignettes contain introductory material; view with\n",
+      "    'browseVignettes()'. To cite Bioconductor, see\n",
+      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
+      "\n",
+      "Loading required package: DelayedArray\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "The following objects are masked from ‘package:Biobase’:\n",
+      "\n",
+      "    anyMissing, rowMedians\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "Loading required package: BiocParallel\n",
+      "\n",
+      "Attaching package: ‘DelayedArray’\n",
+      "\n",
+      "The following objects are masked from ‘package:matrixStats’:\n",
+      "\n",
+      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    aperm, apply, rowsum\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(survival)\n",
@@ -17,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -49,21 +171,60 @@
       "  Refseq_IDs = col_character(),\n",
       "  Orthology = col_character(),\n",
       "  Notes = col_character()\n",
-      ")\n",
+      ")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset: unified_cervical_data"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Parsed with column specification:\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = col_character()\n",
       ")\n",
       "See spec(...) for full column specifications.\n",
-      "converting counts to integer mode\n",
+      "converting counts to integer mode\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset: unified_uterine_data"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Parsed with column specification:\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = col_character()\n",
       ")\n",
       "See spec(...) for full column specifications.\n",
-      "converting counts to integer mode\n",
+      "converting counts to integer mode\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset: unified_uterine_endometrial_data"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Parsed with column specification:\n",
       "cols(\n",
       "  .default = col_double(),\n",
@@ -77,6 +238,8 @@
    "source": [
     "matrisome_df <- rutils::load_matrisome_df(matrisome_list)\n",
     "for (i in seq_len(length(unified_dsets))) {\n",
+    "    cat(paste0(\"Processing dataset: \", unified_dsets[i]))\n",
+    "    \n",
     "    counts_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/counts.tsv\")) %>%\n",
     "        dplyr::rename(geneID = Hugo_Symbol) %>%\n",
     "        dplyr::select(-Entrez_Gene_Id) %>%\n",
@@ -85,6 +248,9 @@
     "    counts <- as.matrix(counts_df[, -1])\n",
     "    rownames(counts) <- counts_df$geneID\n",
     "    norm_counts <- varianceStabilizingTransformation(counts)\n",
+    "    \n",
+    "    norm_counts_df <- norm_counts %>%\n",
+    "        as_tibble(rownames = \"geneID\")\n",
     "    \n",
     "    matrisome_counts_df <- counts_df %>%\n",
     "        dplyr::filter(geneID %in% matrisome_df$gene_symbol)\n",
@@ -95,6 +261,8 @@
     "    \n",
     "    write_tsv(matrisome_counts_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/matrisome_counts.tsv\"))\n",
     "    write_tsv(norm_matrisome_counts_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/norm_matrisome_counts.tsv\"))\n",
+    "    \n",
+    "    write_tsv(norm_counts_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/norm_counts.tsv\"))\n",
     "}"
    ]
   }
