Ran feature perm for multiple models.

--- a/feature_selection_analysis/nbc.ipynb
+++ b/feature_selection_analysis/nbc.ipynb
@@ -2,21 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
     "from sklearn.pipeline import make_pipeline, Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
-    "from sklearn.compose import ColumnTransformer, TransformedTargetRegressor\n",
     "from sklearn.metrics import f1_score\n",
-    "from skopt.space import Real, Integer, Categorical\n",
-    "from skopt import gp_minimize\n",
     "\n",
     "import utils.dev_config as dev_conf\n",
     "import utils.preprocessing as prep\n",
@@ -169,12 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimize model"
+    "# Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,15 +180,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get baselines"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "Most frequent baseline: 0.3665158371040725\n",
-      "Monte Carlo baseline: 0.3673247075043701\n"
+      "Monte Carlo baseline: 0.36771084757470685\n"
      ]
     }
    ],
@@ -228,84 +218,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## SMBO"
+    "model = GaussianNB()\n",
+    "# model = MultinomialNB()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def objective(h_params, X, y, scoring_default, r, verbose=True):\n",
-    "    if verbose:\n",
-    "        print(h_params)\n",
-    "    model = RandomForestClassifier(\n",
-    "        n_estimators=h_params[0],\n",
-    "        max_depth=h_params[1],\n",
-    "        max_features=h_params[2],\n",
-    "        min_samples_split=h_params[3],\n",
-    "        min_samples_leaf=h_params[4],\n",
-    "        bootstrap=h_params[5],\n",
-    "        n_jobs=-1,\n",
-    "        random_state=r\n",
-    "    )\n",
-    "    return -np.mean(cross_val_score(\n",
-    "        model,\n",
-    "        X,\n",
-    "        y,\n",
-    "        cv=KFold(n_splits=5),\n",
-    "        n_jobs=-1,\n",
-    "        scoring=scoring_default\n",
-    "    ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "space = [\n",
-    "    Integer(int(1e2), int(1e3), name=\"n_estimators\"),\n",
-    "    Integer(int(10), int(100), name=\"max_depth\"),\n",
-    "    Categorical([\"auto\", \"sqrt\", \"log2\"], name=\"max_features\"),\n",
-    "    Integer(int(2), int(4), name=\"min_samples_split\"),\n",
-    "    Integer(int(1), int(3), name=\"min_samples_leaf\"),\n",
-    "    Categorical([True, False], name=\"bootstrap\")\n",
-    "]\n",
-    "n_initial = 10 * len(space)\n",
-    "n_calls = 50 * len(space)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.33606208 0.34521324 0.38135076 0.35977421 0.41618788]\n",
+      "0.3677176332075712\n"
+     ]
+    }
+   ],
    "source": [
     "scoring_default = \"f1_weighted\"\n",
-    "callback_file = f\"{unified_dsets[dset_idx]}_opt_rfc_h_params_{scoring_default}.tsv\"\n",
     "\n",
-    "try:\n",
-    "    os.remove(callback_file)\n",
-    "except OSError:\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "res = gp_minimize(\n",
-    "    lambda h_ps: objective(h_ps, x_df, y_df, scoring_default, rand),\n",
-    "    space,\n",
-    "    verbose=True,\n",
-    "    random_state=rand,\n",
-    "    n_initial_points=n_initial,\n",
-    "    n_calls = n_calls,\n",
-    "    n_jobs=-1,\n",
-    "    callback=lambda x: opt.save_callback(x, callback_file, n = 5, sep=\"\\t\")\n",
-    ")"
+    "cv_res = cross_val_score(model, x_df, y_df, cv=KFold(n_splits=5), n_jobs=-1, scoring=scoring_default)\n",
+    "print(cv_res)\n",
+    "print(cv_res.mean())"
    ]
   },
   {
