Creating scripts which run through all datasets.

--- a/feature_selection_analysis/MI_cls.ipynb
+++ b/feature_selection_analysis/MI_cls.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0"
+    "dset_idx = 0"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "matrisome_df = prep.load_matrisome_df(matrisome_list)\n",
-    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')\n",
+    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')\n",
     "matrisome_sig_deg_df = (\n",
     "    sig_deg_df.query(\"in_matrisome == True\")\n",
     "        .reset_index(drop=True)\n",
@@ -78,7 +78,7 @@
     "covariate_cols = [\"age_at_diagnosis\", \"bmi\", \"race\", \"ethnicity\"]\n",
     "dep_cols = [\"vital_status\", \"survival_time\"]\n",
     "cat_cols = [\"race\", \"ethnicity\"]\n",
-    "survival_df = prep.load_survival_df(f\"{dirs.data_dir}/{unified_dsets[i]}/survival_data.tsv\", event_code)"
+    "survival_df = prep.load_survival_df(f\"{dirs.data_dir}/{unified_dsets[dset_idx]}/survival_data.tsv\", event_code)"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm_matrisome_counts_df = pd.read_csv(f\"{dirs.data_dir}/{unified_dsets[i]}/norm_matrisome_counts.tsv\", sep='\\t')\n",
+    "norm_matrisome_counts_df = pd.read_csv(f\"{dirs.data_dir}/{unified_dsets[dset_idx]}/norm_matrisome_counts.tsv\", sep='\\t')\n",
     "norm_filtered_matrisome_counts_t_df = (\n",
     "    norm_matrisome_counts_df[[\"geneID\"] + list(figo_df.sample_name)]\n",
     "        .set_index(\"geneID\")                        # set as index so will be column names\n",
@@ -305,6 +305,26 @@
     "        .reset_index()                              # \"sample_name\" should now be its own column\n",
     "        .rename({\"index\": \"sample_name\"}, axis=1)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(216, 1009)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm_filtered_matrisome_counts_t_df.shape"
    ]
   },
   {
@@ -621,7 +641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48.97770980000132\n"
+      "49.77009770000586\n"
      ]
     }
    ],
@@ -784,10 +804,10 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>PRL</td>\n",
-       "      <td>0.007953</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.010135</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -797,7 +817,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.000053</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -816,7 +836,7 @@
        "1    TIMP4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "2  C1QTNF6  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "3      TNC  0.023202  0.023202  0.023202  0.023202  0.023202  0.023202   \n",
-       "4      PRL  0.007953  0.000000  0.000000  0.010135  0.000000  0.000000   \n",
+       "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "\n",
        "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_93  MI_est_94  MI_est_95  \\\n",
        "0  0.083027  0.083027  0.083027  ...   0.083027   0.083027   0.083027   \n",
@@ -830,7 +850,7 @@
        "1   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "2   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "3   0.023202   0.023202   0.023202   0.023202    0.023202    0.023202   \n",
-       "4   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "4   0.000053   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "\n",
        "   MI_est_median  \n",
        "0       0.083027  \n",
@@ -864,7 +884,7 @@
     {
      "data": {
       "text/plain": [
-       "481"
+       "483"
       ]
      },
      "execution_count": 13,
@@ -882,8 +902,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_df[[\"geneID\", \"MI_est_median\"]].to_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_MI_figo_results.tsv\", sep=\"\\t\", index=False)"
+    "mi_df[[\"geneID\", \"MI_est_median\"]].to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_MI_figo_results.tsv\", sep=\"\\t\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
