--- a/feature_selection_analysis/feature_perm_cls.ipynb
+++ b/feature_selection_analysis/feature_perm_cls.ipynb
@@ -321,6 +321,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Get baselines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent baseline: 0.3665158371040725\n",
+      "Monte Carlo baseline: 0.3654881482030349\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand.seed(seed)\n",
+    "\n",
+    "label_value_counts_df = (\n",
+    "    pd.DataFrame(y_df.figo_num.value_counts()).reset_index()\n",
+    "        .rename(columns={\"index\": \"label\", \"figo_num\": \"n\"})\n",
+    "        .sort_values(\"n\", ascending=False)\n",
+    ")\n",
+    "\n",
+    "most_frequent_label = label_value_counts_df.label[0]\n",
+    "most_frequent_baseline = f1_score(y_df.values.squeeze(), np.repeat(most_frequent_label, y_df.shape[0]), average=\"weighted\")\n",
+    "\n",
+    "mc_baseline = opt.mc_classification_baseline(\n",
+    "    y=y_df.values.squeeze(),\n",
+    "    labels=label_value_counts_df.label.values,\n",
+    "    weights=label_value_counts_df.n.values / label_value_counts_df.n.values.sum(),\n",
+    "    metric=lambda y, yhat: f1_score(y, yhat, average=\"weighted\"),\n",
+    "    n=1001\n",
+    ")\n",
+    "\n",
+    "print(f\"Most frequent baseline: {most_frequent_baseline}\")\n",
+    "print(f\"Monte Carlo baseline: {mc_baseline.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## LR (L1 penalty)"
    ]
   },
