--- a/feature_selection_analysis/coxph.ipynb
+++ b/feature_selection_analysis/coxph.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: ggpubr\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(survival)\n",
@@ -33,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,41 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i <- 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  Division = col_character(),\n",
-      "  Category = col_character(),\n",
-      "  `Gene Symbol` = col_character(),\n",
-      "  `Gene Name` = col_character(),\n",
-      "  Synonyms = col_character(),\n",
-      "  HGNC_IDs = col_double(),\n",
-      "  `HGNC_IDs Links` = col_double(),\n",
-      "  UniProt_IDs = col_character(),\n",
-      "  Refseq_IDs = col_character(),\n",
-      "  Orthology = col_character(),\n",
-      "  Notes = col_character()\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
-    "matrisome_df <- load_matrisome_df(matrisome_path)"
+    "dset_idx <- 1"
    ]
   },
   {
@@ -91,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +87,7 @@
     }
    ],
    "source": [
-    "# survival_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
-    "survival_path <- paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\")\n",
+    "survival_path <- paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/survival_data.tsv\")\n",
     "survival_df <- load_survival_df(survival_path, event_code)\n",
     "filtered_survival_df <- survival_df %>%\n",
     "    dplyr::select(one_of(c(\"sample_name\", dep_cols, covariate_cols))) %>%\n",
@@ -156,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +126,7 @@
     }
    ],
    "source": [
-    "norm_matrisome_counts <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/norm_matrisome_counts.tsv\")) %>%\n",
+    "norm_matrisome_counts <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/norm_matrisome_counts.tsv\")) %>%\n",
     "    column_to_rownames(var = \"geneID\") %>%\n",
     "    as.matrix()\n",
     "\n",
@@ -183,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -336,8 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -425,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,12 +427,12 @@
     "cox_regression_df <- tibble(\"geneID\" = gsub(\"_\", \"-\", genes_of_interest), \"gene_pval\" = gene_pvals, \"gene_coeff\" = gene_coeffs)\n",
     "sig_cox_regression_df <- cox_regression_df %>%\n",
     "    dplyr::filter(gene_pval < 0.05)\n",
-    "write_tsv(cox_regression_df, paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_coxph_results.tsv\"))"
+    "write_tsv(cox_regression_df, paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
